--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -156,6 +156,11 @@
                                             <RowDefinition Height="Auto" />
                                             <RowDefinition Height="Auto" />
                                             <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
                                         </Grid.RowDefinitions>
                                         <Expander Grid.Row="{DynamicResource GridViewSectionOrderDetails}"
                                                   IsExpanded="True"
@@ -798,6 +803,23 @@
                                             <StackPanel Margin="0,0,0,25">
                                                 <Separator Background="{DynamicResource HighlightGlyphBrush}" Margin="0,5,0,5"/>
                                                 <ContentControl x:Name="SteamScreenshots_SteamScreenshotsViewControl" Margin="0,10,20,0" />
+                                            </StackPanel>
+                                        </Expander>
+
+                                        <Expander Grid.Row="{DynamicResource GridViewSectionOrderWeb}"
+                                                  IsExpanded="True"
+                                                  Visibility="{Binding ElementName=WebExplorer_BrowserHostViewControl, Path=Content.IsControlVisible, Converter={StaticResource BooleanToVisibilityConverter}, TargetNullValue=Collapsed, FallbackValue=Collapsed}"
+                                                  Margin="0,0,5,0">
+                                            <Expander.Header>
+                                                <TextBlock Text="{DynamicResource LOCWebExplorer_WebLabel}" Style="{DynamicResource BaseTextBlockStyle}"
+                                                           Cursor="Hand"
+                                                           FontWeight="Medium" FontSize="{DynamicResource FontSizeLarge}" />
+                                            </Expander.Header>
+                                            <StackPanel Margin="0,0,0,25">
+                                                <Separator Background="{DynamicResource HighlightGlyphBrush}" Margin="0,5,0,5"/>
+                                                <ContentControl x:Name="WebExplorer_BrowserHostViewControl"
+                                                                Height="{DynamicResource WebExplorerControlHeight}"
+                                                                Margin="0,5,0,5" />
                                             </StackPanel>
                                         </Expander>
                                     </Grid>
