Details View & Grid View: Display stars visuals for user, critic and community scores

--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -578,17 +578,49 @@
                                                                         <Label Name="PART_ElemVersion" Content="{DynamicResource LOCVersionLabel}" />
                                                                         <Button Name="PART_ButtonVersion" VerticalAlignment="Center" />
                                                                         <Label Name="PART_ElemUserScore" Content="{DynamicResource LOCUserScore}" />
-
-                                                                        <TextBlock Name="PART_TextUserScore" VerticalAlignment="Center"
-                                                                                   Style="{DynamicResource TextBlockGameScore}" />
+                                                                        <StackPanel Orientation="Horizontal"
+                                                                                    Visibility="{Binding ElementName=PART_TextUserScore, Path=Visibility}">
+                                                                            <TextBlock Name="PART_TextUserScore" VerticalAlignment="Center"
+                                                                                       Style="{DynamicResource TextBlockGameScore}" />
+                                                                            <ContentControl Content="{Binding Game.UserScore}"
+                                                                                            Padding="6,0,0,4"
+                                                                                            HorizontalAlignment="Left"
+                                                                                            VerticalAlignment="Center"
+                                                                                            Background="Transparent"
+                                                                                            Foreground="{Binding ElementName=PART_TextUserScore, Path=Foreground}"
+                                                                                            Height="{Binding ElementName=PART_TextUserScore, Path=ActualHeight}"
+                                                                                            ContentTemplate="{StaticResource FiveStarScoreTemplate}"/>
+                                                                        </StackPanel>
 
                                                                         <Label Name="PART_ElemCommunityScore" Content="{DynamicResource LOCCommunityScore}" />
-                                                                        <TextBlock Name="PART_TextCommunityScore" VerticalAlignment="Center"
-                                                                                   Style="{DynamicResource TextBlockGameScore}" />
+                                                                        <StackPanel Orientation="Horizontal"
+                                                                                    Visibility="{Binding ElementName=PART_TextCommunityScore, Path=Visibility}">
+                                                                            <TextBlock Name="PART_TextCommunityScore" VerticalAlignment="Center"
+                                                                                       Style="{DynamicResource TextBlockGameScore}" />
+                                                                            <ContentControl Content="{Binding Game.CommunityScore}"
+                                                                                            Padding="6,0,0,4"
+                                                                                            HorizontalAlignment="Left"
+                                                                                            VerticalAlignment="Center"
+                                                                                            Background="Transparent"
+                                                                                            Foreground="{Binding ElementName=PART_TextCommunityScore, Path=Foreground}"
+                                                                                            Height="{Binding ElementName=PART_TextCommunityScore, Path=ActualHeight}"
+                                                                                            ContentTemplate="{StaticResource FiveStarScoreTemplate}"/>
+                                                                        </StackPanel>
 
                                                                         <Label Name="PART_ElemCriticScore" Content="{DynamicResource LOCCriticScore}" />
-                                                                        <TextBlock Name="PART_TextCriticScore" VerticalAlignment="Center"
-                                                                                   Style="{DynamicResource TextBlockGameScore}" />
+                                                                        <StackPanel Orientation="Horizontal"
+                                                                                    Visibility="{Binding ElementName=PART_TextCriticScore, Path=Visibility}">
+                                                                            <TextBlock Name="PART_TextCriticScore" VerticalAlignment="Center"
+                                                                                       Style="{DynamicResource TextBlockGameScore}" />
+                                                                            <ContentControl Content="{Binding Game.CriticScore}"
+                                                                                            Padding="6,0,0,4"
+                                                                                            HorizontalAlignment="Left"
+                                                                                            VerticalAlignment="Center"
+                                                                                            Background="Transparent"
+                                                                                            Foreground="{Binding ElementName=PART_TextCriticScore, Path=Foreground}"
+                                                                                            Height="{Binding ElementName=PART_TextCriticScore, Path=ActualHeight}"
+                                                                                            ContentTemplate="{StaticResource FiveStarScoreTemplate}"/>
+                                                                        </StackPanel>
 
                                                                         <Label Name="PART_ElemAgeRating" Content="{DynamicResource LOCAgeRatingLabel}" />
                                                                         <ItemsControl Name="PART_ItemsAgeRatings" />
