--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -133,28 +133,58 @@
                                                         Tag="{DynamicResource DetailsViewAllowUseOfLogos}" 
                                                         Style="{DynamicResource ControlPanelBoolTagToVisibility}"/>
 
-                                        <DockPanel Margin="20,0,10,20" LastChildFill="False" VerticalAlignment="Bottom">
+                                        <StackPanel Margin="20,0,10,20" VerticalAlignment="Bottom">
                                             <!--<Image Name="PART_ImageIcon" MaxHeight="48" MaxWidth="48"
                                                    DockPanel.Dock="Left" Margin="0,0,20,0"
                                                    VerticalAlignment="Bottom"
                                                    RenderOptions.BitmapScalingMode="Fant" />-->
-                                            <ContentControl x:Name="ScreenshotsVisualizer_PluginButton" Height="40" VerticalAlignment="Bottom" Margin="0,0,10,0" DockPanel.Dock="Left" Opacity="0.80"
+                                            <DockPanel LastChildFill="False">
+                                                <ContentControl x:Name="ScreenshotsVisualizer_PluginButton" Height="40" VerticalAlignment="Bottom" Margin="0,0,10,0" DockPanel.Dock="Left" Opacity="0.80"
                                                             Visibility="{PluginSettings Plugin=ScreenshotsVisualizer, Path=HasData, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                                            <ContentControl x:Name="SystemChecker_PluginButton" Height="40" VerticalAlignment="Bottom" Margin="0,0,10,0" DockPanel.Dock="Left" Opacity="0.80"
+                                                <ContentControl x:Name="SystemChecker_PluginButton" Height="40" VerticalAlignment="Bottom" Margin="0,0,10,0" DockPanel.Dock="Left" Opacity="0.80"
                                                             Visibility="{PluginSettings Plugin=SystemChecker, Path=EnableIntegrationButton, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                                            <ContentControl x:Name="CheckLocalizations_PluginButton" Height="40" VerticalAlignment="Bottom" Margin="0,0,10,0" DockPanel.Dock="Left" Opacity="0.80"
+                                                <ContentControl x:Name="CheckLocalizations_PluginButton" Height="40" VerticalAlignment="Bottom" Margin="0,0,10,0" DockPanel.Dock="Left" Opacity="0.80"
                                                             Visibility="{PluginSettings Plugin=CheckLocalizations, Path=EnableIntegrationButton, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                                            <ContentControl x:Name="CheckDlc_PluginButton" Height="40" VerticalAlignment="Bottom" Margin="0,0,10,0" DockPanel.Dock="Left" Opacity="0.80"
+                                                <ContentControl x:Name="CheckDlc_PluginButton" Height="40" VerticalAlignment="Bottom" Margin="0,0,10,0" DockPanel.Dock="Left" Opacity="0.80"
                                                             Visibility="{PluginSettings Plugin=CheckDlc, Path=EnableIntegrationButton, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                                            <ContentControl x:Name="LibraryManagement_PluginFeaturesIconList" Height="30" Margin="0,0,20,0"
+                                                <ContentControl x:Name="LibraryManagement_PluginFeaturesIconList" Height="30" Margin="0,0,20,0"
                                                             VerticalAlignment="Bottom" DockPanel.Dock="Right" Opacity="0.80"
                                                             Visibility="{PluginSettings Plugin=LibraryManagement, Path=EnableIntegrationFeatures, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}">
-                                                <ContentControl.Effect>
-                                                    <DropShadowEffect BlurRadius="5" RenderingBias="Performance"
+                                                    <ContentControl.Effect>
+                                                        <DropShadowEffect BlurRadius="5" RenderingBias="Performance"
                                                                       ShadowDepth="0" Color="DarkGray" />
-                                                </ContentControl.Effect>
-                                            </ContentControl>
-                                        </DockPanel>
+                                                    </ContentControl.Effect>
+                                                </ContentControl>
+                                            </DockPanel>
+                                            <Border DockPanel.Dock="Left" Margin="0,10,0,0"
+                                                    Tag="{DynamicResource DetailsViewDisplayGameNameIfLogoVisible}">
+                                                <Border.Style>
+                                                    <Style TargetType="Border">
+                                                        <Setter Property="Visibility" Value="Visible" />
+                                                        <Style.Triggers>
+                                                            <MultiDataTrigger>
+                                                                <MultiDataTrigger.Conditions>
+                                                                    <Condition Binding="{Binding Tag, RelativeSource={RelativeSource Self}, FallbackValue=False}" Value="False" />
+                                                                    <Condition Binding="{Binding ElementName=ExtraMetadataLoader_LogoLoaderControl, Path=Visibility, FallbackValue=Collapsed}" Value="Visible" />
+                                                                    <Condition Binding="{PluginSettings Plugin=ExtraMetadataLoader, Path=IsLogoAvailable, FallbackValue=False}" Value="True" />
+                                                                </MultiDataTrigger.Conditions>
+                                                                <Setter Property="Visibility" Value="Collapsed" />
+                                                            </MultiDataTrigger>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </Border.Style>
+                                                <TextBlock FontFamily="{DynamicResource FontFamily}" Name="PART_TextDisplayName"
+                                                       FontSize="{DynamicResource FontSizeLargest}"
+                                                       FontWeight="Medium"
+                                                       TextWrapping="Wrap" VerticalAlignment="Center" Foreground="White">
+                                                    <TextBlock.Effect>
+                                                        <DropShadowEffect Color="Black" ShadowDepth="0" Opacity="1"
+                                                                          BlurRadius="10" Direction="0"
+                                                                          RenderingBias="Performance" />
+                                                    </TextBlock.Effect>
+                                                </TextBlock>
+                                            </Border>
+                                        </StackPanel>
                                         <StackPanel Margin="20,20,0,0"
                                                     HorizontalAlignment="Left" VerticalAlignment="Top">
                                             <ContentControl x:Name="CheckLocalizations_PluginFlags" Height="30"
