--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -207,6 +207,15 @@
                                                     <Style TargetType="Button" BasedOn="{StaticResource PlayersCountButtonStyle}" />
                                                 </ContentControl.Resources>
                                             </ContentControl>
+
+                                            <Border Margin="0,10,0,0"
+                                                    Background="{DynamicResource DetailsViewBannerPanelBackgroundBrush}"
+                                                    BorderBrush="{DynamicResource DetailsViewBannerPanelBorderBrush}"
+                                                    BorderThickness="1"
+                                                    Padding="6,2,6,2"
+                                                    Visibility="{PluginSettings Plugin=GogSecondClassWatcher, Path=IsControlVisible, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                                <ContentControl x:Name="GogSecondClassWatcher_SecondClassWatcherControl" />
+                                            </Border>
                                         </StackPanel>
                                     </Grid>
                                     <Grid Name="DetailsHeader">
